// Copyright 2016 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////

syntax = "proto3";
package endpoints.MyProjectName.grpc; 

import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
import "google/api/annotations.proto";

service MyService {
  rpc myRpc1(myRpc1Request) returns (myRpc1Response) {
    option (google.api.http) = { post: "/v1/myPath1" };
  }
  // If you don't need request.
  rpc myRpc2(google.protobuf.Empty) returns (myRpc2Response) {
    option (google.api.http) = { post: "/v1/myPath2" };
  }
}

// ======> myRpc1 <======
message myRpc1Request {
  string myParam1 = 1;
}

message myRpc1Response {
  int32 status_code = 1;
  string status_msg = 2;
  string data_layer = 3;
}


// ======> myRpc2 <======
message myRpc2Response {
  int32 status_code = 1;
  string status_msg = 2;
  string data_layer = 3;
}
